# CozyMemobase

./: .cursorrules  .gitignore
deployment/memobase/: Dockerfile  QUICKSTART.md  README.md  api.py  build.sh  docker-compose.yml  env.example  pyproject.toml  wait_for_pg.py
deployment/memobase/memobase_server/: __init__.py  connectors.py  env.py  errors.py  struct_logger.py  types.py  utils.py
deployment/memobase/memobase_server/api_layer/: __init__.py  blob.py  buffer.py  chore.py  context.py  event.py  middleware.py  profile.py  project.py  roleplay.py  user.py
deployment/memobase/memobase_server/auth/: admin_api.py  token.py
deployment/memobase/memobase_server/controllers/: billing.py  blob.py  buffer.py  buffer_background.py  context.py  event.py  event_gist.py  full.py  profile.py  project.py  status.py  user.py
deployment/memobase/memobase_server/llms/: __init__.py  doubao_cache_llm.py  openai_model_llm.py  utils.py
deployment/memobase/memobase_server/models/: action.py  blob.py  claim.py  database.py  response.py  utils.py
deployment/memobase/memobase_server/prompts/: __init__.py  chat_context_pack.py  event_tagging.py  extract_profile.py  merge_profile.py  merge_profile_yolo.py  organize_profile.py  pick_related_profiles.py  profile_init_utils.py  summary_entry_chats.py  summary_profile.py  user_profile_topics.py  utils.py  zh_extract_profile.py  zh_merge_profile.py  zh_merge_profile_yolo.py  zh_summary_entry_chats.py  zh_user_profile_topics.py
deployment/memobase/memobase_server/telemetry/: __init__.py  capture_key.py  open_telemetry.py
(+36 files in other folders)
