[project]
name = "memobase_server"
version = "0.1.0"
description = "Memobase Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "opentelemetry-api>=1.35.0",
    "opentelemetry-exporter-prometheus>=0.56b0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-sdk>=1.35.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "tiktoken>=0.9.0",
    "typeguard>=4.4.4",
    "volcengine-python-sdk[ark]>=4.0.6",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
